apps/nginx-demo/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: nginx-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: 478047323853.dkr.ecr.us-east-1.amazonaws.com/demoapp:e4856518e03f4f4b9f24a84f6bdb192032c6e334
          ports:
            - containerPort: 80
          volumeMounts:
            - name: html-volume
              mountPath: /usr/share/nginx/html
              readOnly: true
      volumes:
        - name: html-volume
          configMap:
            name: nginx-html
